Update/Improve match and tournament functionalities
